[gd_scene load_steps=6 format=3 uid="uid://dxybm5ykp1obl"]

[ext_resource type="Texture2D" uid="uid://jfnkmo2nk7x7" path="res://img/bed.png" id="1_6qy7n"]
[ext_resource type="Script" path="res://code/bed.gd" id="1_u1jnc"]
[ext_resource type="Texture2D" uid="uid://ccvpboqpumayf" path="res://img/its_mountain_done.png" id="3_g2ugg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_choos"]
size = Vector2(32, 58)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pda1i"]
radius = 24.0
height = 80.0

[node name="Bed" type="Area2D"]
script = ExtResource("1_u1jnc")
task_id = 1

[node name="BedBody" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="BedBody"]
texture = ExtResource("1_6qy7n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BedBody"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_choos")

[node name="BedArea" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_pda1i")

[node name="TaskTimer" type="Timer" parent="."]
one_shot = true

[node name="TaskIcon" type="Sprite2D" parent="."]
visible = false
position = Vector2(144, -112)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_g2ugg")

[connection signal="body_entered" from="." to="." method="_on_bed_area_entered"]
[connection signal="timeout" from="TaskTimer" to="." method="_on_task_timer_timeout"]
